fix: update user profile layout spacing and responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -3059,12 +3059,16 @@ h2.category__heading--small {
   padding: 0 8px;
 }
 
+.user-profile__info {
+  margin: -28px 0 2px;
+}
+
 .user-profile__info-body textarea.form-group__input {
   height: 108px;
 }
 
 .user-profile__info-body label.form-group__label-user-info {
-  top: 27%;
+  top: 28px;
 }
 
 .user-profile__info-body textarea#intro {
@@ -3142,12 +3146,16 @@ h2.category__heading--small {
 }
 
 .form-group__gender-user-profile-body li:hover {
-  background: rgb(107 19 182 / 1);
+  background: #6b13b6;
   color: #fff;
 }
 
-.form-group__gender-user-profile-active {
-  background: rgb(191 120 255 / 1);
+.form-group__gender-user-profile-body li:not(:hover) {
+  color: #000;
+}
+
+li.form-group__gender-user-profile-active {
+  background: #bf78ff;
   color: #fff;
 }
 
@@ -3155,6 +3163,8 @@ h2.category__heading--small {
   display: flex;
   justify-content: end;
   gap: 20px;
+
+  margin-top: -30px;
 }
 
 .user-profile__btn-cancel {
